cabal-version:      2.2
name:               HBridge
version:            0.0.0.0
synopsis:           HBridge is a MQTT message bridging tool.
description:        Please see the README on Github at
                    <https://github.com/emqx/HBridge#readme>
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2020 EMQ Technologies Co., Ltd.
author:             Commelina
maintainer:         maosics@gmail.com
tested-with:        GHC == 8.8.3, GHC == 8.8.1
category:           Middleware
homepage:           https://github.com/emqx/HBridge
bug-reports:        https://github.com/emqx/HBridge/issues
build-type:         Simple
extra-source-files: README.md
                    Changelog.md

source-repository head
  type:     git
  location: https://github.com/emqx/HBridge


library
  exposed-modules:  Network.MQTT.Bridge.Environment
                    Network.MQTT.Bridge.Extra
                    Network.MQTT.Bridge.RestAPI
                    Network.MQTT.Bridge.Types
  other-modules:    Network.MQTT.Bridge.SQL.AbsESQL
                    Network.MQTT.Bridge.SQL.ErrM
                    Network.MQTT.Bridge.SQL.LexESQL
                    Network.MQTT.Bridge.SQL.ParESQL
                    Network.MQTT.Bridge.SQL.PrintESQL
                    Network.MQTT.Bridge.SQL.SkelESQL
  hs-source-dirs:   src
  build-depends:    base                  >= 4.9 && < 5
                  , aeson
                  , array
                  , async
                  , bytestring
                  , containers
                  , ekg
                  , ekg-core
                  , hesp
                  , transformers-base
                  , mtl
                  , net-mqtt
                  , network-simple
                  , network-uri
                  , optparse-applicative
                  , scientific
                  , servant
                  , servant-server
                  , stm
                  , text
                  , time                  >= 1.9.1
                  , unordered-containers
                  , uuid
                  , vector
                  , wai
                  , yaml
                  , monad-control
                  , co-log
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

executable HBridge
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base                  >= 4.9 && < 5
                  , HBridge
                  , aeson
                  , array
                  , async
                  , bytestring
                  , containers
                  , ekg
                  , ekg-core
                  , hesp
                  , mtl
                  , net-mqtt
                  , network-simple
                  , network-uri
                  , optparse-applicative
                  , scientific
                  , stm
                  , text
                  , time                  >= 1.9.1
                  , unordered-containers
                  , uuid
                  , vector
                  , warp
                  , yaml
                  , co-log
  default-language: Haskell2010
  ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                    -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
                    -threaded -rtsopts -with-rtsopts=-N

test-suite HBridge-test
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  other-modules:
  hs-source-dirs:     test
  build-depends:      base >= 4.9 && < 5
                    , HBridge
                    , hspec
  default-language:   Haskell2010
  build-tool-depends: hspec-discover:hspec-discover == 2.*
  ghc-options:        -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints
                      -threaded -rtsopts -with-rtsopts=-N